express_api/main_project/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api
  labels:
    app: express-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-api
  template:
    metadata:
      labels:
        app: express-api
    spec:
      containers:
      - name: express-api
        image: <docker-image-url>:latest
        ports:
        - containerPort: 3000
