express_api/main_project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
spec:
  selector:
    app: express
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
