express_api/main_project/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-api-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: abc
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: express-api-service
              port:
                number: 80
